--- a/reference/annotation-competition-api.v1.yaml
+++ b/reference/annotation-competition-api.v1.yaml
@@ -230,6 +230,8 @@ paths:
                         userName: string
                         annotationCount: string
                         rank: 1
+        '401':
+          description: Unauthorized
         '500':
           description: Internal Server Error
       operationId: get-leader_board
