fix GET /competitions/next response properties

--- a/reference/annotation-competition-api.v1.yaml
+++ b/reference/annotation-competition-api.v1.yaml
@@ -265,10 +265,10 @@ paths:
                 description: ''
                 type: object
                 properties:
-                  competitionId:
+                  CompetitionId:
                     type: string
                     minLength: 1
-                  competitionName:
+                  CompetitionName:
                     type: string
                     minLength: 1
                   startAt:
