大文字を小文字に修正

--- a/reference/annotation-competition-api.v1.yaml
+++ b/reference/annotation-competition-api.v1.yaml
@@ -273,10 +273,10 @@ paths:
                 description: ''
                 type: object
                 properties:
-                  CompetitionId:
+                  competitionId:
                     type: string
                     minLength: 1
-                  CompetitionName:
+                  competitionName:
                     type: string
                     minLength: 1
                   startAt:
